<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/my_toolbar"
        android:layout_margin="@dimen/dimen_4dp"
        android:orientation="vertical">
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:layout_marginLeft="@dimen/dimen_4dp"
            android:layout_marginRight="@dimen/dimen_4dp"
            android:layout_marginBottom="@dimen/dimen_4dp"
            android:inputType="textEmailAddress|textNoSuggestions"
            app:met_clearButton="true"
            app:met_errorColor="@android:color/holo_red_dark"
            android:textAlignment="viewStart"
            app:met_helperText="@string/sample_mail_id"
            android:textSize="@dimen/dimen_16sp"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorPrimaryDark"
            android:gravity="start" />
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_mailid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:layout_marginLeft="@dimen/dimen_4dp"
            android:layout_marginRight="@dimen/dimen_4dp"
            android:layout_marginBottom="@dimen/dimen_4dp"
            android:inputType="textEmailAddress|textNoSuggestions"
            app:met_clearButton="true"
            app:met_errorColor="@android:color/holo_red_dark"
            android:textAlignment="viewStart"
            app:met_helperText="@string/sample_mail_id"
            android:textSize="@dimen/dimen_16sp"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorPrimaryDark"
            android:gravity="start" />
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:maxLength="6"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:layout_marginLeft="@dimen/dimen_4dp"
            android:layout_marginRight="@dimen/dimen_4dp"
            android:layout_marginBottom="@dimen/dimen_4dp"
            android:inputType="textPassword|textNoSuggestions"
            app:met_clearButton="true"
            app:met_errorColor="@android:color/holo_red_dark"
            android:textAlignment="viewStart"
            android:textSize="@dimen/dimen_16sp"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorPrimaryDark"
            android:gravity="start" />
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_cnfrm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cnfrm_password"
            android:maxLength="6"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:layout_marginLeft="@dimen/dimen_4dp"
            android:layout_marginRight="@dimen/dimen_4dp"
            android:layout_marginBottom="@dimen/dimen_4dp"
            android:inputType="textPassword|textNoSuggestions"
            app:met_clearButton="true"
            app:met_errorColor="@android:color/holo_red_dark"
            android:textAlignment="viewStart"
            android:textSize="@dimen/dimen_16sp"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorPrimaryDark"
            android:gravity="start" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_4dp"
            android:layout_weight="1"
            android:id="@+id/sigup_btn"
            android:textColor="@android:color/white"
            android:background="@drawable/rectangle_background_selected"
            android:text="SignUp"/>
    </LinearLayout>
</RelativeLayout>